crates/wdl-grammar/tests/parsing/empty-scatter/source.wdl
# This is a test for parsing an empty scatter statement.

version 1.1

workflow test {
    scatter () {
    }
}
